--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content="text/html">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>班级网站</title>
+    <title>逐梦·桐海</title>
 
     <style>
         /* 初始化 */
