--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 <!-- 高考剩余时间 -->
                 <div class="timeToExamAndTimeFromGraduate">
                     <p class="title">距离高考还有</p>
-                    <p class="date">3650<span>天</span></p>
+                    <p class="date">3648<span>天</span></p>
                 </div>
                 <!-- 快速入门 -->
                 <div class="help">
@@ -311,7 +311,7 @@
     
             <!-- 相册 -->
             <div class="main_album mainPage">
-                暂未开放
+                正在努力开发中……
             </div>
 
             <!-- 教师 -->
@@ -326,7 +326,8 @@
 
             <!-- 关于 -->
             <div class="main_about mainPage">
-                暂未开放
+                亚斯红日网络科技中心©版权所有 
+MADE BY NO.18
             </div>
         </div>
         
@@ -355,7 +356,7 @@
 
         <li><div class="describe">
             <span>主页</span>
-            <span>八班的大门永远为你敞开!</span>
+            <span>十五班的大门永远为你敞开!</span>
         </div></li>
 
         <li><div class="describe">
