--- a/index.html
+++ b/index.html
@@ -312,11 +312,12 @@
             <!-- 相册 -->
             <div class="main_album mainPage">
                 正在努力开发中……
+ 
             </div>
 
             <!-- 教师 -->
             <div class="main_teacher mainPage">
-                暂未开放
+                <img src="icon/TC.png" alt="" class="helpImg">
             </div>
 
             <!-- 留言 -->
