--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
                 </div>
                 <!-- 高考剩余时间 -->
                 <div class="timeToExamAndTimeFromGraduate">
-                    <p class="title">距离高考还有</p>
-                    <p class="date">3648<span>天</span></p>
+                    <p class="title">距离暑假还有</p>
+                    <p class="date">32<span>天</span></p>
                 </div>
                 <!-- 快速入门 -->
                 <div class="help">
